[package]
name = "book_worm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
regex = "1.6.0"
lazy_static = "1.4.0"
reqwest = "0.11.11"
urlencoding = "2.1.0"
serde = "1.0.138"
serde_json = "1.0.82"
